@@ -48,8 +48,8 @@
     <TitleSequencesSha1>304d13a126c15bf2c86ff13b81a2f2cc1856ac8d</TitleSequencesSha1>
     <ObjectsUrl>https://github.com/OpenRCT2/objects/releases/download/v1.0.17/objects.zip</ObjectsUrl>
     <ObjectsSha1>44a702b58b144e138029f4d096d16f5beec3ddb1</ObjectsSha1>
-    <ReplaysUrl>https://github.com/OpenRCT2/replays/releases/download/v0.0.18/replays.zip</ReplaysUrl>
-    <ReplaysSha1>5B1C9A6E91B135A1EB629332BEA488A10CA6AD60</ReplaysSha1>
+    <ReplaysUrl>https://github.com/OpenRCT2/replays/releases/download/v0.0.19/replays.zip</ReplaysUrl>
+    <ReplaysSha1>8EAAE223FF9FE4D49949C9F343831977E6DB6CDE</ReplaysSha1>
   </PropertyGroup>
 
   <ItemGroup>
