@@ -35,7 +35,7 @@ constexpr const RideTypeDescriptor ReverserRollerCoasterRTD =
     SET_FIELD(AvailableBreakdowns, (1 << BREAKDOWN_SAFETY_CUT_OUT) | (1 << BREAKDOWN_VEHICLE_MALFUNCTION) | (1 << BREAKDOWN_BRAKES_FAILURE)),
     SET_FIELD(Heights, { 18, 24, 8, 11, }),
     SET_FIELD(MaxMass, 15),
-    SET_FIELD(LiftData, { SoundId::LiftClassic, 3, 4 }),
+    SET_FIELD(LiftData, { SoundId::LiftWood, 3, 4 }),
     SET_FIELD(RatingsCalculationFunction, ride_ratings_calculate_reverser_roller_coaster),
     SET_FIELD(RatingsMultipliers, { 48, 28, 7 }),
     SET_FIELD(UpkeepCosts, { 39, 20, 80, 10, 3, 10 }),
