@@ -3,6 +3,7 @@
 - Feature: [#12999] .sea (RCT Classic) scenarios are now listed in the “New Scenario” dialog.
 - Feature: [#13000] objective_options command for console.
 - Feature: [#13096] Add Esperanto translation.
+- Change: [#9568] Change lift sounds of Reverser Roller Coaster and Compact Inverted Coaster to better fitting ones.
 - Fix: [#3200] Close Construction window upon selecting vehicle page.
 - Fix: [#5904] Empty errors on tile inspector base height change.
 - Fix: [#8015] RCT2 files are not found when put into the OpenRCT2 folder.
